@@ -116,6 +116,7 @@
   /etc/mke2fs.conf
   /etc/fonts/fonts.conf
   /etc/protocols
+  /etc/rpm/platform
   /usr/LIB/xserver/SecurityPolicy
   /etc/pango/ARCH/pango.modules
   /usr/LIB/gtk-2.0/*/loaders/libpixbufloader-png.so
