@@ -4,6 +4,7 @@
 /etc/services
 /etc/group
 /etc/passwd
+/etc/rpm/platform
 /etc/termcap
 /lib
 /lib64
