@@ -1,3 +1,4 @@
+- bundle /etc/rpm/platform for rpm 4.4.8
 - use modularized ide drivers and configure ide-controller in modprobe.conf
 - auto_install:
   o allow "automatic=met:http,ser:server,dir:/pub/dir
